--- a/index.html
+++ b/index.html
@@ -18,40 +18,60 @@
             <div class="right">
                 <ul>
                     <li>On campus</li>
-                    <li>Onlne</li>
+                    <li>Online</li>
                     <li>For companies</li>
                     <li>Sign in</li>
                 </ul>
             </div>
         </nav>
         <div class="banner">
-            <img src="./assets/images/banner.jpg" alt="banner">
-            <h1>Learn something new everyday</h1>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
-            <button>Start here</button>
+            <div class="banleft">
+                <img src="./assets/images/banner.jpg" alt="banner">
+            </div>
+            <ul>
+                <li><h1>Learn something new everyday</h1></li>
+                <li><h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3></li>
+                <li><button>Start here</button></li>                 
+            </ul>           
         </div>
         <div class="information">
-            <div class="left">
+            <div class="inleft">
                 <img src="./assets/images/information-main.jpg" alt="information-main">
-                <h1>It doesn't hurt to keep practicing</h1>
-                <h4>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h4>
-                <h5>Emmanuel, Sr Strategist at Hiring.com</h5>
+                <ul>
+                    <li><h1>It doesn't hurt to keep practicing</h1></li>
+                    <li><h4>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h4></li>
+                    <li><h5>Emmanuel, Sr Strategist at Hiring.com</h5></li>
+                </ul>    
             </div>
-            <div class="right">
-                <img src="./assets/images/information-orientation.jpg" alt="information-orientation">
-                <h4>Orientation date</h4>
-                <h6>Tue 10/11 & Wed 10/12: 8am-3pm</h6>
-                <h6>Read more</h6>
-                <img src="./assets/images/information-campus.jpg" alt="information-campus">
-                <h4>Our campus</h4>
-                <h6>Find out which campus is close by you</h6>
-                <h6>Read more</h6>
-                <img src="./assets/images/information-guest-lecture.jpg" alt="guest-lecture">
-                <h4>Our guest lecture</h2>
-                <h6>Join a keynote with Oliver Sack about music in medical treatment</h6>
-                <h6>Read more</h6>
-            </div>
-        </div>
+            <div class="inright">
+                <div class="container">
+                    <div class="card">
+                        <img src="./assets/images/information-orientation.jpg" alt="information-orientation">
+                        <ul>
+                            <li><h4>Orientation date</h4></li>
+                            <li><h5>Tue 10/11 & Wed 10/12: 8am-3pm</h5></li>
+                            <li><h6>Read more</h6></li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/information-campus.jpg" alt="information-campus">
+                        <ul>
+                            <li><h4>Our campus</h4></li>
+                            <li><h5>Find out which campus is close by you</h5></li>
+                            <li><h6>Read more</h6></li>
+                        </ul>
+                    </div>
+                    <div class="card" style="background-color: #9e9999;">
+                        <img src="./assets/images/information-guest-lecture.jpg" alt="guest-lecture">
+                        <ul>
+                            <li><h4>Our guest lecture</h4></li>
+                            <li><h5>Join a keynote with Oliver Sack about music in medical treatment</h5></li>
+                            <li><h6>Read more</h6></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>        
+        </div>    
         <div class="course">
             <h1>Start learning</h1>
             <img src="./assets/images/course-software.jpg" alt="software">
