Fixed html and added style

--- a/index.html
+++ b/index.html
@@ -25,100 +25,124 @@
             </div>
         </nav>
         <div class="banner">
-            <div class="banleft">
+            <div class="left">
                 <img src="./assets/images/banner.jpg" alt="banner">
             </div>
-            <ul>
-                <li><h1>Learn something new everyday</h1></li>
-                <li><h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3></li>
-                <li><button>Start here</button></li>                 
-            </ul>           
+            <div class="right">
+                <ul>
+                    <li><h1>Learn something new everyday</h1></li>
+                    <li><h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2></li>
+                    <li><button>Start here</button></li>                 
+                </ul>
+            </div>               
         </div>
         <div class="information">
-            <div class="inleft">
+            <div class="left">
                 <img src="./assets/images/information-main.jpg" alt="information-main">
                 <ul>
                     <li><h1>It doesn't hurt to keep practicing</h1></li>
-                    <li><h4>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h4></li>
-                    <li><h5>Emmanuel, Sr Strategist at Hiring.com</h5></li>
+                    <li><h3>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h3></li>
+                    <li><h3>Emmanuel, Sr Strategist at Hiring.com</h5></li>
                 </ul>    
             </div>
-            <div class="inright">
+            <div class="right">
                 <div class="container">
                     <div class="card">
                         <img src="./assets/images/information-orientation.jpg" alt="information-orientation">
                         <ul>
-                            <li><h4>Orientation date</h4></li>
-                            <li><h5>Tue 10/11 & Wed 10/12: 8am-3pm</h5></li>
-                            <li><h6>Read more</h6></li>
+                            <li><h2>Orientation date</h2></li>
+                            <li><h3>Tue 10/11 & Wed 10/12: 8am-3pm</h3></li>
+                            <li><h3 class="read">Read more</h3></li>
                         </ul>
                     </div>
                     <div class="card">
                         <img src="./assets/images/information-campus.jpg" alt="information-campus">
                         <ul>
-                            <li><h4>Our campus</h4></li>
-                            <li><h5>Find out which campus is close by you</h5></li>
-                            <li><h6>Read more</h6></li>
+                            <li><h2>Our campus</h2></li>
+                            <li><h3>Find out which campus is close by you</h3></li>
+                            <li><h3 class="read">Read more</h3></li>
                         </ul>
                     </div>
                     <div class="card" style="background-color: #9e9999;">
                         <img src="./assets/images/information-guest-lecture.jpg" alt="guest-lecture">
                         <ul>
-                            <li><h4>Our guest lecture</h4></li>
-                            <li><h5>Join a keynote with Oliver Sack about music in medical treatment</h5></li>
-                            <li><h6>Read more</h6></li>
+                            <li><h2>Our guest lecture</h2></li>
+                            <li><h3>Join a keynote with Oliver Sack about music in medical treatment</h3></li>
+                            <li><h3 class="read">Read more</h3></li>
                         </ul>
                     </div>
                 </div>
             </div>        
-        </div>    
-        <div class="course">
-            <h1>Start learning</h1>
-            <img src="./assets/images/course-software.jpg" alt="software">
-            <h4>Software engineering</h4>
-            <h6>COURSES</h6>
-            <h6>Web development, Mobile Development, iOT, APIs</h6>
-            <img src="./assets/images/course-computer-art.jpg" alt="computer-art">
-            <h4>Computer art</h4>
-            <h6>COURSES</h6>
-            <h6>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h6>
-            <img src="./assets/images/course-design.jpg" alt="design">
-            <h4>Design</h4>
-            <h6>COURSES</h6>
-            <h6>User Experience Design, User Research, Visual Design</h6>
-            <img src="./assets/images/course-data.jpg" alt="data">
-            <h4>Data</h4>
-            <h6>COURSES</h6>
-            <h6>Data Science, Big Data, SQL, Data Visualization</h6>
-            <img src="./assets/images/course-business.jpg" alt="business">
-            <h4>Business</h4>
-            <h6>COURSES</h6>
-            <h6>Product Development, Business Development, Startup</h6>
-            <img src="./assets/images/course-marketing.jpg" alt="marketing">
-            <h4>Marketing</h4>
-            <h6>COURSES</h6>
-            <h6>Analytics, Content Marketing, Mobile Marketing</h6>
         </div>
-        <div class="thesis">
+            <div class="top" style="background-color:#a39f9f;">
+                <h1>Start learning</h1>
+            </div>    
+            <div class="course">
+                <div class="class">
+                    <img src="./assets/images/course-software.jpg" alt="software">
+                    <div class="description">Software engineering<br> COURSES<br> Web development, Mobile Development, iOT, APIs</div>
+                </div>
+                <div class="class">
+                    <img src="./assets/images/course-computer-art.jpg" alt="computer-art">
+                    <div class="description">Computer art<br> COURSES<br> Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</div>
+                </div>             
+                <div class="class">
+                    <img src="./assets/images/course-design.jpg" alt="design">
+                    <div class="description">Design<br> COURSES<br> User Experience Design, User Research, Visual Design</div>
+                </div>
+                <div class="class">
+                    <img src="./assets/images/course-data.jpg" alt="data">
+                    <div class="description">Data<br> COURSES<br> Data Science, Big Data, SQL, Data Visualization</div>
+                </div>
+                <div class="class">
+                    <img src="./assets/images/course-business.jpg" alt="business">
+                    <div class="description">Business<br> COURSES<br> Product Development, Business Development, Startup</div>
+                </div>
+                <div class="class">
+                    <img src="./assets/images/course-marketing.jpg" alt="marketing">
+                    <div class="description">Marketing<br> COURSES<br> Analytics, Content Marketing, Mobile Marketing</div>
+                </div>               
+            </div>
+        <div class="top">
             <h1>Thesis exhibit</h1>
-            <video src="./assets/videos/thesis.mp4" controls>Video not supported</video>
-            <h1>Reimagine urban</h1>
-            <h3>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h3>
-            <div class="right2">
-                <img src="./assets/images/thesis-fisma.jpg" alt="thesis">
-                <h4>Fisma: Design and Prototype</h4>
-                <h6>Designer showcase of new prototype product</h6>
-                <img src="./assets/images/thesis-now-and-then.jpg" alt="now-and-then">
-                <h4>Now and then</h4>
-                <h6>Research study about New York</h6>
+        </div>
+        <div class="thesis">            
+            <div class="left">
+                <video src="./assets/videos/thesis.mp4" controls>Video not supported</video>
+                <ul>
+                    <li><h1>Reimagine urban</h1></li>
+                    <li><h3>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h3></li>
+                </ul>
+            </div>
+            <div class="right">
+                <div class="container">
+                    <div class="card" style="background-color: #9e9999;">
+                        <img src="./assets/images/thesis-fisma.jpg" alt="thesis">
+                        <ul>
+                            <li><h2>Fisma: Design and Prototype</h2></li>
+                            <li><h3>Designer showcase of new prototype product</h3></li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/thesis-now-and-then.jpg" alt="now-and-then">
+                        <ul>
+                            <li><h2>Now and then</h2></li>
+                            <li><h3>Research study about New York</h3></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
         <footer>
-            <h6>&copy;2016 Colmar Academy. All Rights Reserved</h6>
-            <ul class="footer">
-                <li>Terms</li>
-                <li>Privacy</li>
-            </ul>
+            <div class="left">
+                <h3>&copy;2016 Colmar Academy. All Rights Reserved</h3>
+            </div>
+            <div class="right">
+                <ul>
+                    <li>Terms</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
         </footer>
   </body>
 </html>
