--- a/index.html
+++ b/index.html
@@ -80,27 +80,27 @@
             <div class="course">
                 <div class="class">
                     <img src="./assets/images/course-software.jpg" alt="software">
-                    <div class="description">Software engineering<br> COURSES<br> Web development, Mobile Development, iOT, APIs</div>
+                    <div class="description"><div class="name">Software engineering</div><br> COURSES<br> Web development, Mobile Development, iOT, APIs</div>
                 </div>
                 <div class="class">
                     <img src="./assets/images/course-computer-art.jpg" alt="computer-art">
-                    <div class="description">Computer art<br> COURSES<br> Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</div>
+                    <div class="description"><div class="name">Computer art</div><br> COURSES<br> Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</div>
                 </div>             
                 <div class="class">
                     <img src="./assets/images/course-design.jpg" alt="design">
-                    <div class="description">Design<br> COURSES<br> User Experience Design, User Research, Visual Design</div>
+                    <div class="description"><div class="name">Design</div><br> COURSES<br> User Experience Design, User Research, Visual Design</div>
                 </div>
                 <div class="class">
                     <img src="./assets/images/course-data.jpg" alt="data">
-                    <div class="description">Data<br> COURSES<br> Data Science, Big Data, SQL, Data Visualization</div>
+                    <div class="description"><div class="name">Data</div><br> COURSES<br> Data Science, Big Data, SQL, Data Visualization</div>
                 </div>
                 <div class="class">
                     <img src="./assets/images/course-business.jpg" alt="business">
-                    <div class="description">Business<br> COURSES<br> Product Development, Business Development, Startup</div>
+                    <div class="description"><div class="name">Business</div><br> COURSES<br> Product Development, Business Development, Startup</div>
                 </div>
                 <div class="class">
                     <img src="./assets/images/course-marketing.jpg" alt="marketing">
-                    <div class="description">Marketing<br> COURSES<br> Analytics, Content Marketing, Mobile Marketing</div>
+                    <div class="description"><div class="name">Marketing</div><br> COURSES<br> Analytics, Content Marketing, Mobile Marketing</div>
                 </div>               
             </div>
         <div class="top">
