Added media query for mobile

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                 </ul>
             </div>
         </nav>
+        <div class="mobilenav">
+            <img src="./assets/images/ic-logo.svg" alt="logo">
+            <img src="./assets/images/ic-on-campus.svg" alt="on_campus">
+            <img src="./assets/images/ic-online.svg" alt="online">
+            <img src="./assets/images/ic-login.svg" alt="login">
+        </div>
         <div class="banner">
             <div class="left">
                 <img src="./assets/images/banner.jpg" alt="banner">
@@ -35,6 +41,9 @@
                     <li><button>Start here</button></li>                 
                 </ul>
             </div>               
+        </div>
+        <div class="mobilebanner">
+            <img src="./assets/images/banner.jpg" alt="banner">
         </div>
         <div class="information">
             <div class="left">
@@ -143,6 +152,6 @@
                     <li>Privacy</li>
                 </ul>
             </div>
-        </footer>
+        </footer>    
   </body>
 </html>
