--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         </div>
         <div class="mobilebanner">
             <img src="./assets/images/banner.jpg" alt="banner">
+            <ul>
+                <li><h1>Learn something new everyday</h1></li>
+                <li><h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2></li>
+                <li><button>Start here</button></li>                 
+            </ul>
         </div>
         <div class="information">
             <div class="left">
@@ -82,6 +87,34 @@
                     </div>
                 </div>
             </div>        
+        </div>
+        <div class="mobileinformation">
+            <div class="container">
+                <div class="card">
+                    <img src="./assets/images/information-orientation-mobile.jpg" alt="information-orientation">
+                    <ul>
+                        <li><h2>Orientation date</h2></li>
+                        <li><h3>Tue 10/11 & Wed 10/12: 8am-3pm</h3></li>
+                        <li><h3 class="read">Read more</h3></li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/information-campus-mobile.jpg" alt="information-campus">
+                    <ul>
+                        <li><h2>Our campus</h2></li>
+                        <li><h3>Find out which campus is close by you</h3></li>
+                        <li><h3 class="read">Read more</h3></li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/information-guest-lecture-mobile.jpg" alt="guest-lecture">
+                    <ul>
+                        <li><h2>Our guest lecture</h2></li>
+                        <li><h3>Join a keynote with Oliver Sack about<br> music in medical treatment</h3></li>
+                        <li><h3 class="read">Read more</h3></li>
+                    </ul>
+                </div>
+            </div>
         </div>
             <div class="top" style="background-color:#a39f9f;">
                 <h1>Start learning</h1>
