--- a/index.html
+++ b/index.html
@@ -145,6 +145,15 @@
                     <div class="description"><div class="name">Marketing</div><br> COURSES<br> Analytics, Content Marketing, Mobile Marketing</div>
                 </div>               
             </div>
+        <div class="mobilecourse">
+            <h1>Start learning</h1>
+            <p>Software engineering</p>
+            <p>Computer art</p>
+            <p>Design</p>
+            <p>Data</p>
+            <p>Business</p>
+            <p>Marketing</p>
+        </div>
         <div class="top">
             <h1>Thesis exhibit</h1>
         </div>
@@ -175,6 +184,10 @@
                 </div>
             </div>
         </div>
+        <div class="mobilethesis">
+            <h1>Thesis exhibits</h1><br>
+            <video src="./assets/videos/thesis.mp4" controls>Video not supported</video>
+        </div>
         <footer>
             <div class="left">
                 <h3>&copy;2016 Colmar Academy. All Rights Reserved</h3>
@@ -185,6 +198,9 @@
                     <li>Privacy</li>
                 </ul>
             </div>
-        </footer>    
+        </footer>
+        <div class="mobilefooter">
+            <h3>&copy;2016 Colmar Academy. All Rights Reserved</h3>
+        </div> 
   </body>
 </html>
